New logo and favicon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <main class="coming-soon fade-in">
-    <img src="images/mark-monteith-logo.png" alt="Mark Monteith Logo" class="logo-placeholder">
+    <img src="images/mm-logo.png" alt="Mark Monteith Logo" class="logo-placeholder">
     <h1>New Site Coming Soon</h1>
   </main>
 
